Importing the dataset

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "adbc7c24",
+   "id": "c22acf48",
    "metadata": {},
    "source": [
     "# Car Sales - Regression ANN"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb84607f",
+   "id": "86f7880d",
    "metadata": {},
    "source": [
     "### by ReDay Zarra"
@@ -18,13 +18,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0345fce8",
+   "id": "3993800d",
    "metadata": {},
-   "source": []
+   "source": [
+    "This project utilizes an **artificial neural network to perform a regression task**, which means the model will predict a value based on the features. In this case, the model will have **eight features to predict the purchasing amount** for each customer.This project showcases a *step-by-step implementation* of the model as well as *in-depth notes* to customize the model further for higher accuracy."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "d5db0f6a",
+   "id": "8c9b4dce",
    "metadata": {},
    "source": [
     "## Importing the necessary libraries"
