Importing essential libraries

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c22acf48",
+   "id": "e5638e66",
    "metadata": {},
    "source": [
     "# Car Sales - Regression ANN"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f7880d",
+   "id": "85e893e3",
    "metadata": {},
    "source": [
     "### by ReDay Zarra"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3993800d",
+   "id": "4233b550",
    "metadata": {},
    "source": [
     "This project utilizes an **artificial neural network to perform a regression task**, which means the model will predict a value based on the features. In this case, the model will have **eight features to predict the purchasing amount** for each customer.This project showcases a *step-by-step implementation* of the model as well as *in-depth notes* to customize the model further for higher accuracy."
@@ -26,10 +26,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c9b4dce",
+   "id": "84613219",
    "metadata": {},
    "source": [
     "## Importing the necessary libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ea4b39ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c7409fb",
+   "metadata": {},
+   "source": [
+    "> Classic libraries that will help us read and analyze data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "209cefcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4650872c",
+   "metadata": {},
+   "source": [
+    "> Libraries used for plotting and data visualization"
    ]
   }
  ],
