--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -21,7 +21,7 @@
    "id": "4233b550",
    "metadata": {},
    "source": [
-    "This project utilizes an **artificial neural network to perform a regression task**, which means the model will predict a value based on the features. In this case, the model will have **eight features to predict the purchasing amount** for each customer.This project showcases a *step-by-step implementation* of the model as well as *in-depth notes* to customize the model further for higher accuracy."
+    "This project utilizes an **artificial neural network to perform a regression task**, which means the model will predict a value based on the features. In this case, the model will have **eight features to predict the purchasing amount** for each customer. This project showcases a *step-by-step implementation* of the model as well as *in-depth notes* to customize the model further for higher accuracy."
    ]
   },
   {
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ea4b39ea",
+   "execution_count": 6,
+   "id": "1c243862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,29 +45,209 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c7409fb",
+   "id": "563f893d",
    "metadata": {},
    "source": [
-    "> Classic libraries that will help us read and analyze data"
+    "> Classic libraries that will help us read and analyze data. Pandas is a library used **for data frame manipulations**. NumPy is a package used for **numerical analysis**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "209cefcc",
+   "execution_count": 7,
+   "id": "c2a68138",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import seaborn"
+    "import seaborn as sns\n",
+    "\n",
+    "# Set seaborn style\n",
+    "sns.set_style('darkgrid')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4650872c",
+   "id": "19e196b1",
    "metadata": {},
    "source": [
-    "> Libraries used for plotting and data visualization"
+    "> Libraries used for **plotting and data visualization**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a602f870",
+   "metadata": {},
+   "source": [
+    "## Importing the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "032138c5",
+   "metadata": {},
+   "source": [
+    "Importing the dataset with the **.read_csv method from Pandas to load the dataset** and storing it **in the car_data** variable. However, we will need to change to encoding for the data file because it contains characters (such as '@') that Pandas can't read. We specify the ISO-8859-1 encoding for the datafile to be imported. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1368e199",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car_data = pd.read_csv('Car_Purchasing_Data.csv', encoding = \"ISO-8859-1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03744161",
+   "metadata": {},
+   "source": [
+    "> The .read_csv method from Pandas accepts a parameter called **encoding** which allows us to specify that we want to **use the ISO-8859-1** encoding method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a19f8dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer Name</th>\n",
+       "      <th>Customer e-mail</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Credit Card Debt</th>\n",
+       "      <th>Net Worth</th>\n",
+       "      <th>Car Purchase Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martina Avila</td>\n",
+       "      <td>cubilia.Curae.Phasellus@quisaccumsanconvallis.edu</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.851720</td>\n",
+       "      <td>62812.09301</td>\n",
+       "      <td>11609.380910</td>\n",
+       "      <td>238961.2505</td>\n",
+       "      <td>35321.45877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Harlan Barnes</td>\n",
+       "      <td>eu.dolor@diam.co.uk</td>\n",
+       "      <td>Belize</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.870623</td>\n",
+       "      <td>66646.89292</td>\n",
+       "      <td>9572.957136</td>\n",
+       "      <td>530973.9078</td>\n",
+       "      <td>45115.52566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Naomi Rodriquez</td>\n",
+       "      <td>vulputate.mauris.sagittis@ametconsectetueradip...</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43.152897</td>\n",
+       "      <td>53798.55112</td>\n",
+       "      <td>11160.355060</td>\n",
+       "      <td>638467.1773</td>\n",
+       "      <td>42925.70921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jade Cunningham</td>\n",
+       "      <td>malesuada@dignissim.com</td>\n",
+       "      <td>Cook Islands</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58.271369</td>\n",
+       "      <td>79370.03798</td>\n",
+       "      <td>14426.164850</td>\n",
+       "      <td>548599.0524</td>\n",
+       "      <td>67422.36313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cedric Leach</td>\n",
+       "      <td>felis.ullamcorper.viverra@egetmollislectus.net</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.313749</td>\n",
+       "      <td>59729.15130</td>\n",
+       "      <td>5358.712177</td>\n",
+       "      <td>560304.0671</td>\n",
+       "      <td>55915.46248</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Customer Name                                    Customer e-mail  \\\n",
+       "0    Martina Avila  cubilia.Curae.Phasellus@quisaccumsanconvallis.edu   \n",
+       "1    Harlan Barnes                                eu.dolor@diam.co.uk   \n",
+       "2  Naomi Rodriquez  vulputate.mauris.sagittis@ametconsectetueradip...   \n",
+       "3  Jade Cunningham                            malesuada@dignissim.com   \n",
+       "4     Cedric Leach     felis.ullamcorper.viverra@egetmollislectus.net   \n",
+       "\n",
+       "        Country  Gender        Age  Annual Salary  Credit Card Debt  \\\n",
+       "0      Bulgaria       0  41.851720    62812.09301      11609.380910   \n",
+       "1        Belize       0  40.870623    66646.89292       9572.957136   \n",
+       "2       Algeria       1  43.152897    53798.55112      11160.355060   \n",
+       "3  Cook Islands       1  58.271369    79370.03798      14426.164850   \n",
+       "4        Brazil       1  57.313749    59729.15130       5358.712177   \n",
+       "\n",
+       "     Net Worth  Car Purchase Amount  \n",
+       "0  238961.2505          35321.45877  \n",
+       "1  530973.9078          45115.52566  \n",
+       "2  638467.1773          42925.70921  \n",
+       "3  548599.0524          67422.36313  \n",
+       "4  560304.0671          55915.46248  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "car_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d25ea736",
+   "metadata": {},
+   "source": [
+    "> The .head() method is used to **show the first five rows** of the dataframe."
    ]
   }
  ],
