Visualizing the dataset

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1c243862",
+   "id": "8dde5500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "563f893d",
+   "id": "d5020265",
    "metadata": {},
    "source": [
     "> Classic libraries that will help us read and analyze data. Pandas is a library used **for data frame manipulations**. NumPy is a package used for **numerical analysis**."
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c2a68138",
+   "id": "0f074044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e196b1",
+   "id": "584f94d0",
    "metadata": {},
    "source": [
     "> Libraries used for **plotting and data visualization**."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a602f870",
+   "id": "bf760553",
    "metadata": {},
    "source": [
     "## Importing the dataset"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "032138c5",
+   "id": "2e842349",
    "metadata": {},
    "source": [
     "Importing the dataset with the **.read_csv method from Pandas to load the dataset** and storing it **in the car_data** variable. However, we will need to change to encoding for the data file because it contains characters (such as '@') that Pandas can't read. We specify the ISO-8859-1 encoding for the datafile to be imported. "
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1368e199",
+   "id": "126830a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03744161",
+   "id": "04f4ec8e",
    "metadata": {},
    "source": [
     "> The .read_csv method from Pandas accepts a parameter called **encoding** which allows us to specify that we want to **use the ISO-8859-1** encoding method."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a19f8dec",
+   "id": "6aff6f63",
    "metadata": {},
    "outputs": [
     {
@@ -244,11 +244,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d25ea736",
+   "id": "fc759dd8",
    "metadata": {},
    "source": [
     "> The .head() method is used to **show the first five rows** of the dataframe."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f08c65fe",
+   "metadata": {},
+   "source": [
+    "## Visualizing the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61eb35f4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
