Adding explanation for data cleaning

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -272,7 +272,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "6b9871e2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -289,6 +291,20 @@
     "sns.pairplot(car_data, height = 5, aspect = 1)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8300ae91",
+   "metadata": {},
+   "source": [
+    "## Cleaning the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44e0979c",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
