Cleaning and splitting the dataset

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -294,17 +294,344 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8300ae91",
+   "id": "0ecebd0f",
    "metadata": {},
    "source": [
-    "## Cleaning the dataset"
+    "## Cleaning & Splitting the dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "44e0979c",
+   "id": "e7eac76c",
    "metadata": {},
-   "source": []
+   "source": [
+    "Cleaning the training and testing data by removing variables that we don't need.\n",
+    "This reduces unnecessary data that our model can't use, and allows for higher\n",
+    "accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2cad8e16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Credit Card Debt</th>\n",
+       "      <th>Net Worth</th>\n",
+       "      <th>Car Purchase Amount</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.851720</td>\n",
+       "      <td>62812.09301</td>\n",
+       "      <td>11609.380910</td>\n",
+       "      <td>238961.2505</td>\n",
+       "      <td>35321.45877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Belize</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40.870623</td>\n",
+       "      <td>66646.89292</td>\n",
+       "      <td>9572.957136</td>\n",
+       "      <td>530973.9078</td>\n",
+       "      <td>45115.52566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>1</td>\n",
+       "      <td>43.152897</td>\n",
+       "      <td>53798.55112</td>\n",
+       "      <td>11160.355060</td>\n",
+       "      <td>638467.1773</td>\n",
+       "      <td>42925.70921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cook Islands</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58.271369</td>\n",
+       "      <td>79370.03798</td>\n",
+       "      <td>14426.164850</td>\n",
+       "      <td>548599.0524</td>\n",
+       "      <td>67422.36313</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57.313749</td>\n",
+       "      <td>59729.15130</td>\n",
+       "      <td>5358.712177</td>\n",
+       "      <td>560304.0671</td>\n",
+       "      <td>55915.46248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41.462515</td>\n",
+       "      <td>71942.40291</td>\n",
+       "      <td>6995.902524</td>\n",
+       "      <td>541670.1016</td>\n",
+       "      <td>48901.44342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37.642000</td>\n",
+       "      <td>56039.49793</td>\n",
+       "      <td>12301.456790</td>\n",
+       "      <td>360419.0988</td>\n",
+       "      <td>31491.41457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53.943497</td>\n",
+       "      <td>68888.77805</td>\n",
+       "      <td>10611.606860</td>\n",
+       "      <td>764531.3203</td>\n",
+       "      <td>64147.28888</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>Botswana</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59.160509</td>\n",
+       "      <td>49811.99062</td>\n",
+       "      <td>14013.034510</td>\n",
+       "      <td>337826.6382</td>\n",
+       "      <td>45442.15353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>marlal</td>\n",
+       "      <td>1</td>\n",
+       "      <td>46.731152</td>\n",
+       "      <td>61370.67766</td>\n",
+       "      <td>9391.341628</td>\n",
+       "      <td>462946.4924</td>\n",
+       "      <td>45107.22566</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Country  Gender        Age  Annual Salary  Credit Card Debt  \\\n",
+       "0        Bulgaria       0  41.851720    62812.09301      11609.380910   \n",
+       "1          Belize       0  40.870623    66646.89292       9572.957136   \n",
+       "2         Algeria       1  43.152897    53798.55112      11160.355060   \n",
+       "3    Cook Islands       1  58.271369    79370.03798      14426.164850   \n",
+       "4          Brazil       1  57.313749    59729.15130       5358.712177   \n",
+       "..            ...     ...        ...            ...               ...   \n",
+       "495         Nepal       0  41.462515    71942.40291       6995.902524   \n",
+       "496      Zimbabwe       1  37.642000    56039.49793      12301.456790   \n",
+       "497   Philippines       1  53.943497    68888.77805      10611.606860   \n",
+       "498      Botswana       1  59.160509    49811.99062      14013.034510   \n",
+       "499        marlal       1  46.731152    61370.67766       9391.341628   \n",
+       "\n",
+       "       Net Worth  Car Purchase Amount  \n",
+       "0    238961.2505          35321.45877  \n",
+       "1    530973.9078          45115.52566  \n",
+       "2    638467.1773          42925.70921  \n",
+       "3    548599.0524          67422.36313  \n",
+       "4    560304.0671          55915.46248  \n",
+       "..           ...                  ...  \n",
+       "495  541670.1016          48901.44342  \n",
+       "496  360419.0988          31491.41457  \n",
+       "497  764531.3203          64147.28888  \n",
+       "498  337826.6382          45442.15353  \n",
+       "499  462946.4924          45107.22566  \n",
+       "\n",
+       "[500 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = car_data.drop(['Customer Name', 'Customer e-mail'], axis = 1)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fddabcc2",
+   "metadata": {},
+   "source": [
+    "> Using the **.drop() function allows us to specify what data we want to remove**. The axis parameter specifies that we want to drop the column (axis = 1) and not the row (axis = 0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b337ab98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      35321.45877\n",
+       "1      45115.52566\n",
+       "2      42925.70921\n",
+       "3      67422.36313\n",
+       "4      55915.46248\n",
+       "          ...     \n",
+       "495    48901.44342\n",
+       "496    31491.41457\n",
+       "497    64147.28888\n",
+       "498    45442.15353\n",
+       "499    45107.22566\n",
+       "Name: Car Purchase Amount, Length: 500, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = car_data['Car Purchase Amount']\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f11c5f3",
+   "metadata": {},
+   "source": [
+    "> Assigning the variable **y to be the Car Purchase Amount column** from the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3a9cb519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500, 7)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99436ad9",
+   "metadata": {},
+   "source": [
+    "> Verifying the shape of the **features dataset which is 500 rows and 7 columns**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5a077832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500,)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c553a97a",
+   "metadata": {},
+   "source": [
+    "> Verifying the shape of the features dataset which is **500 rows all in one column**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d7065a4",
+   "metadata": {},
+   "source": [
+    "## Normalizing the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04857570",
+   "metadata": {},
+   "source": [
+    "Without normalizing the data to have them be in a similar numeric range, the model will have horrible accuracy. Which is why its crucial that we scale the data for the "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aee5007",
+   "metadata": {},
+   "source": [
+    "## Training the model"
+   ]
   }
  ],
  "metadata": {
