Applying scaler to X dataset

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6971936f",
+   "id": "b18de9af",
    "metadata": {},
    "source": [
     "## Cleaning & Splitting the dataset"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3c9cb9",
+   "id": "39087b2a",
    "metadata": {},
    "source": [
     "Cleaning the training and testing data by removing variables that we don't need.\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b5785732",
+   "id": "e895a05a",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf089aa1",
+   "id": "1a321034",
    "metadata": {},
    "source": [
     "> Using the **.drop() function allows us to specify what data we want to remove**. The axis parameter specifies that we want to drop the column (axis = 1) and not the row (axis = 0)."
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "70698735",
+   "id": "d5d25b8a",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3f04c61",
+   "id": "77a31a41",
    "metadata": {},
    "source": [
     "> Assigning the variable **y to be the Car Purchase Amount column** from the dataset."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0e20aaf9",
+   "id": "066d4fcb",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "609512ed",
+   "id": "32fadf49",
    "metadata": {},
    "source": [
     "> Verifying the shape of the **features dataset which is 500 rows and 7 columns**."
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "a979783f",
+   "id": "5cb1d706",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "134f06fa",
+   "id": "99b9a3db",
    "metadata": {},
    "source": [
     "> Verifying the shape of the features dataset which is **500 rows all in one column**"
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddceedfb",
+   "id": "0043683b",
    "metadata": {},
    "source": [
     "## Normalizing the data"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d57e9143",
+   "id": "a7241db6",
    "metadata": {},
    "source": [
     "Without normalizing the data to have them be in a similar numeric range, the model will have horrible accuracy. Which is why its crucial that we scale the data for the model to train properly."
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "dde9305d",
+   "id": "ec213544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4c04a29",
+   "id": "5ca26723",
    "metadata": {},
    "source": [
     "> Importing the MinMaxScaler class and **creating the scaler object**"
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "166f79f1",
+   "id": "26285f7d",
    "metadata": {
     "scrolled": true
    },
@@ -633,14 +633,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc52cf45",
+   "id": "7d6afbea",
    "metadata": {},
-   "source": []
+   "source": [
+    "> **Storing the scaled data values in** a new matrix called **X_scaled**. The .fit_transform function is used to **apply the MinMaxScaler to the X dataset**."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "82d873af",
+   "id": "0191f0b9",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +662,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a75893a",
+   "id": "01072c92",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed8238d1",
    "metadata": {},
    "source": [
     "## Training the model"
@@ -669,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b843b6c",
+   "id": "44b9132d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -677,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96643f41",
+   "id": "46a07bc5",
    "metadata": {},
    "outputs": [],
    "source": []
