Scaling the dependent variable

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 118,
    "id": "b0764c30",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 119,
    "id": "009ade23",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 120,
    "id": "e32fc779",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 121,
    "id": "7b11ad37",
    "metadata": {
     "scrolled": true
@@ -235,7 +235,7 @@
        "4  560304.0671          55915.46248  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 122,
    "id": "6b9871e2",
    "metadata": {
     "scrolled": false
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b18de9af",
+   "id": "359ffd8c",
    "metadata": {},
    "source": [
     "## Cleaning & Splitting the dataset"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39087b2a",
+   "id": "22f1c842",
    "metadata": {},
    "source": [
     "Cleaning the training and testing data by removing variables that we don't need.\n",
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "e895a05a",
+   "execution_count": 123,
+   "id": "147fc3d2",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "[500 rows x 5 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a321034",
+   "id": "5e9813e6",
    "metadata": {},
    "source": [
     "> Using the **.drop() function allows us to specify what data we want to remove**. The axis parameter specifies that we want to drop the column (axis = 1) and not the row (axis = 0)."
@@ -475,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "d5d25b8a",
+   "execution_count": 124,
+   "id": "b6c90a39",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "Name: Car Purchase Amount, Length: 500, dtype: float64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a31a41",
+   "id": "613c3559",
    "metadata": {},
    "source": [
     "> Assigning the variable **y to be the Car Purchase Amount column** from the dataset."
@@ -516,8 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "066d4fcb",
+   "execution_count": 125,
+   "id": "86c57bf0",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "(500, 5)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32fadf49",
+   "id": "d0e707a8",
    "metadata": {},
    "source": [
     "> Verifying the shape of the **features dataset which is 500 rows and 7 columns**."
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "5cb1d706",
+   "execution_count": 126,
+   "id": "3e3a9e2d",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "(500,)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b9a3db",
+   "id": "424b0a62",
    "metadata": {},
    "source": [
     "> Verifying the shape of the features dataset which is **500 rows all in one column**"
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0043683b",
+   "id": "08bcd0f4",
    "metadata": {},
    "source": [
     "## Normalizing the data"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7241db6",
+   "id": "54124c9c",
    "metadata": {},
    "source": [
     "Without normalizing the data to have them be in a similar numeric range, the model will have horrible accuracy. Which is why its crucial that we scale the data for the model to train properly."
@@ -590,8 +590,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "ec213544",
+   "execution_count": 127,
+   "id": "b2f69fa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,16 +601,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ca26723",
+   "id": "d73fa87d",
    "metadata": {},
    "source": [
     "> Importing the MinMaxScaler class and **creating the scaler object**"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7593c68d",
+   "metadata": {},
+   "source": [
+    "### Scaling the features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "26285f7d",
+   "execution_count": 128,
+   "id": "47c7c7b2",
    "metadata": {
     "scrolled": true
    },
@@ -621,7 +629,7 @@
        "(500, 5)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d6afbea",
+   "id": "f3b1302f",
    "metadata": {},
    "source": [
     "> **Storing the scaled data values in** a new matrix called **X_scaled**. The .fit_transform function is used to **apply the MinMaxScaler to the X dataset**."
@@ -641,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "0191f0b9",
+   "execution_count": 129,
+   "id": "893dc6bc",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +659,7 @@
        "array([1.e+00, 7.e+01, 1.e+05, 2.e+04, 1.e+06])"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,13 +670,88 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01072c92",
+   "id": "d9e47e52",
    "metadata": {},
-   "source": []
+   "source": [
+    "> Shows the **maximum values** for every column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "68c83379",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    0.,    20., 20000.,   100., 20000.])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler.data_min_"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "ed8238d1",
+   "id": "f24e6ffe",
+   "metadata": {},
+   "source": [
+    "> Shows the **minimum values** for every column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1391d37b",
+   "metadata": {},
+   "source": [
+    "### Scaling the dependent variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "81970a59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y.values.reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164b81cb",
+   "metadata": {},
+   "source": [
+    "> In order for the scaler to be applied to our dependent variable, we have to make sure the **values in the column are between -1 and 1**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "f153a082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_scaled = scaler.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "368131e2",
+   "metadata": {},
+   "source": [
+    "> **Applying the MinMaxScaler** to the dependent variable column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0914d3a",
    "metadata": {},
    "source": [
     "## Training the model"
@@ -677,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b9132d",
+   "id": "0be5ea6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -685,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a07bc5",
+   "id": "51c267c1",
    "metadata": {},
    "outputs": [],
    "source": []
