--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -294,15 +294,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359ffd8c",
+   "id": "9a5a712d",
    "metadata": {},
    "source": [
-    "## Cleaning & Splitting the dataset"
+    "## Cleaning the dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22f1c842",
+   "id": "3a1283a6",
    "metadata": {},
    "source": [
     "Cleaning the training and testing data by removing variables that we don't need.\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "147fc3d2",
+   "id": "d6fc92a4",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9813e6",
+   "id": "d17bd52c",
    "metadata": {},
    "source": [
     "> Using the **.drop() function allows us to specify what data we want to remove**. The axis parameter specifies that we want to drop the column (axis = 1) and not the row (axis = 0)."
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "b6c90a39",
+   "id": "9210c76a",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613c3559",
+   "id": "f749543a",
    "metadata": {},
    "source": [
     "> Assigning the variable **y to be the Car Purchase Amount column** from the dataset."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "86c57bf0",
+   "id": "3e3fd0c1",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0e707a8",
+   "id": "e05e3ea2",
    "metadata": {},
    "source": [
     "> Verifying the shape of the **features dataset which is 500 rows and 7 columns**."
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "3e3a9e2d",
+   "id": "b6472f71",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "424b0a62",
+   "id": "c9e3d162",
    "metadata": {},
    "source": [
     "> Verifying the shape of the features dataset which is **500 rows all in one column**"
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08bcd0f4",
+   "id": "9b2a6e5e",
    "metadata": {},
    "source": [
     "## Normalizing the data"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54124c9c",
+   "id": "b021b2c4",
    "metadata": {},
    "source": [
     "Without normalizing the data to have them be in a similar numeric range, the model will have horrible accuracy. Which is why its crucial that we scale the data for the model to train properly."
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b2f69fa9",
+   "id": "b6e01c72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d73fa87d",
+   "id": "9295c766",
    "metadata": {},
    "source": [
     "> Importing the MinMaxScaler class and **creating the scaler object**"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7593c68d",
+   "id": "2155a3f3",
    "metadata": {},
    "source": [
     "### Scaling the features"
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "47c7c7b2",
+   "id": "f8db7058",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b1302f",
+   "id": "e3b06f2d",
    "metadata": {},
    "source": [
     "> **Storing the scaled data values in** a new matrix called **X_scaled**. The .fit_transform function is used to **apply the MinMaxScaler to the X dataset**."
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "893dc6bc",
+   "id": "2449307f",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e47e52",
+   "id": "5ffa046e",
    "metadata": {},
    "source": [
     "> Shows the **maximum values** for every column"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "68c83379",
+   "id": "c0a06e00",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f24e6ffe",
+   "id": "8e741641",
    "metadata": {},
    "source": [
     "> Shows the **minimum values** for every column"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1391d37b",
+   "id": "d1028d57",
    "metadata": {},
    "source": [
     "### Scaling the dependent variable"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "81970a59",
+   "id": "d1bcb1b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164b81cb",
+   "id": "03b95c09",
    "metadata": {},
    "source": [
     "> In order for the scaler to be applied to our dependent variable, we have to make sure the **values in the column are between -1 and 1**."
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "f153a082",
+   "id": "b2ee1850",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "368131e2",
+   "id": "3326481c",
    "metadata": {},
    "source": [
     "> **Applying the MinMaxScaler** to the dependent variable column"
@@ -751,24 +751,110 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0914d3a",
+   "id": "d887aa47",
+   "metadata": {},
+   "source": [
+    "## Splitting the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6288bb7",
+   "metadata": {},
+   "source": [
+    "Splitting the dataset **into training and testing sets** for the model to be trained and evaluated on. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "6bbba6d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3260662",
+   "metadata": {},
+   "source": [
+    "> Importing the **train_test_split function** from sci-kit learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "4ed94bea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y_scaled, test_size = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "1142b9bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400, 5)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "7cf3efd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 5)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cbd8760",
    "metadata": {},
    "source": [
     "## Training the model"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0be5ea6f",
+   "cell_type": "markdown",
+   "id": "c6ffb31d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> Training the model on data that the "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c267c1",
+   "id": "6e8a8483",
    "metadata": {},
    "outputs": [],
    "source": []
