Importing Keras for training

--- a/Car_Sales_Regression.ipynb
+++ b/Car_Sales_Regression.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5a712d",
+   "id": "c0d06aee",
    "metadata": {},
    "source": [
     "## Cleaning the dataset"
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a1283a6",
+   "id": "824e61ec",
    "metadata": {},
    "source": [
     "Cleaning the training and testing data by removing variables that we don't need.\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "d6fc92a4",
+   "id": "a6dfaff4",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17bd52c",
+   "id": "059cbf8e",
    "metadata": {},
    "source": [
     "> Using the **.drop() function allows us to specify what data we want to remove**. The axis parameter specifies that we want to drop the column (axis = 1) and not the row (axis = 0)."
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "9210c76a",
+   "id": "b930ddac",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f749543a",
+   "id": "901987e5",
    "metadata": {},
    "source": [
     "> Assigning the variable **y to be the Car Purchase Amount column** from the dataset."
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "3e3fd0c1",
+   "id": "a89c0e17",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05e3ea2",
+   "id": "dc1f0728",
    "metadata": {},
    "source": [
     "> Verifying the shape of the **features dataset which is 500 rows and 7 columns**."
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b6472f71",
+   "id": "9dd8b94b",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e3d162",
+   "id": "e1dd6fc4",
    "metadata": {},
    "source": [
     "> Verifying the shape of the features dataset which is **500 rows all in one column**"
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2a6e5e",
+   "id": "b067501e",
    "metadata": {},
    "source": [
     "## Normalizing the data"
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b021b2c4",
+   "id": "94ccf1f9",
    "metadata": {},
    "source": [
     "Without normalizing the data to have them be in a similar numeric range, the model will have horrible accuracy. Which is why its crucial that we scale the data for the model to train properly."
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "b6e01c72",
+   "id": "516ac09d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9295c766",
+   "id": "9c70cd28",
    "metadata": {},
    "source": [
     "> Importing the MinMaxScaler class and **creating the scaler object**"
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2155a3f3",
+   "id": "b198dee6",
    "metadata": {},
    "source": [
     "### Scaling the features"
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f8db7058",
+   "id": "f53af9ef",
    "metadata": {
     "scrolled": true
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b06f2d",
+   "id": "8943854f",
    "metadata": {},
    "source": [
     "> **Storing the scaled data values in** a new matrix called **X_scaled**. The .fit_transform function is used to **apply the MinMaxScaler to the X dataset**."
@@ -650,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "2449307f",
+   "id": "3c5ebb3f",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ffa046e",
+   "id": "10abc848",
    "metadata": {},
    "source": [
     "> Shows the **maximum values** for every column"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "c0a06e00",
+   "id": "e646a6ee",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e741641",
+   "id": "dae5a2f0",
    "metadata": {},
    "source": [
     "> Shows the **minimum values** for every column"
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1028d57",
+   "id": "3c3dad1b",
    "metadata": {},
    "source": [
     "### Scaling the dependent variable"
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "d1bcb1b9",
+   "id": "8caaf983",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b95c09",
+   "id": "4017086f",
    "metadata": {},
    "source": [
     "> In order for the scaler to be applied to our dependent variable, we have to make sure the **values in the column are between -1 and 1**."
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "b2ee1850",
+   "id": "77b77e6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3326481c",
+   "id": "ea9e4c31",
    "metadata": {},
    "source": [
     "> **Applying the MinMaxScaler** to the dependent variable column"
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d887aa47",
+   "id": "948d0ce4",
    "metadata": {},
    "source": [
     "## Splitting the dataset"
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6288bb7",
+   "id": "80faf656",
    "metadata": {},
    "source": [
     "Splitting the dataset **into training and testing sets** for the model to be trained and evaluated on. "
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "6bbba6d8",
+   "id": "8edd75d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3260662",
+   "id": "97abeeb0",
    "metadata": {},
    "source": [
     "> Importing the **train_test_split function** from sci-kit learn"
@@ -786,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "4ed94bea",
+   "id": "fb0f7a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "1142b9bd",
+   "id": "4ea760a8",
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "7cf3efd5",
+   "id": "360682df",
    "metadata": {},
    "outputs": [
     {
@@ -837,27 +837,70 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cbd8760",
+   "id": "07c266eb",
    "metadata": {},
    "source": [
     "## Training the model"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 139,
+   "id": "e580c3fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow.keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "c6ffb31d",
+   "id": "20c16c88",
    "metadata": {},
    "source": [
-    "> Training the model on data that the "
+    "> **Importing Keras** from TensorFlow to train our model in a sequential fashion. The **Sequential class** allows us to just that. Finally, the **Dense class** allows us to build fully connected layers or dense layers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "4481beec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Dense(units = 50, input_dim = 5, activation = 'relu'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "868c30cf",
+   "metadata": {},
+   "source": [
+    "> Initialize the variable model to be a object of the Sequential class, allowing us to build the model sequentially. The sequential class has the .add() function which allows us to add layers. The Dense layer allows us to "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "dce0e1af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(Dense(units = 50, activation = 'relu'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8a8483",
+   "id": "0915177e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mode.add(Dense(1, activation = 'linear'))"
+   ]
   }
  ],
  "metadata": {
